--- a/src/once-ui/tokens/scheme.scss
+++ b/src/once-ui/tokens/scheme.scss
@@ -301,4 +301,36 @@
     --scheme-pink-600-10:  #F854BE1A;
     --scheme-pink-600-30:  #F854BE4D;
     --scheme-pink-600-50:  #F854BE80;
+
+    --scheme-brand-100: #17001f;
+    --scheme-brand-200: #2d0034;
+    --scheme-brand-300: #67226d;
+    --scheme-brand-400: #86408b;
+    --scheme-brand-500: #a25ba7;
+    --scheme-brand-600: #c57cca;
+    --scheme-brand-600-10: rgba(197,124,202,0.1);
+    --scheme-brand-600-30: rgba(197,124,202,0.3);
+    --scheme-brand-600-50: rgba(197,124,202,0.5);
+    --scheme-brand-700: #e79bec;
+    --scheme-brand-800: #ffbeff;
+    --scheme-brand-900: #ffd5ff;
+    --scheme-brand-1000: #ffdfff;
+    --scheme-brand-1100: #ffdfff;
+    --scheme-brand-1200: #ffdfff;
+    
+    --scheme-accent-100: #17001d;
+    --scheme-accent-200: #2c0032;
+    --scheme-accent-300: #5e3064;
+    --scheme-accent-400: #78497f;
+    --scheme-accent-500: #96659d;
+    --scheme-accent-600: #b986c0;
+    --scheme-accent-600-10: rgba(185,134,192,0.1);
+    --scheme-accent-600-30: rgba(185,134,192,0.3);
+    --scheme-accent-600-50: rgba(185,134,192,0.5);
+    --scheme-accent-700: #d6a2dd;
+    --scheme-accent-800: #f8c2ff;
+    --scheme-accent-900: #ffd5ff;
+    --scheme-accent-1000: #ffe6ff;
+    --scheme-accent-1100: #ffe9ff;
+    --scheme-accent-1200: #ffe9ff;
 }
